--- a/prueba2.html
+++ b/prueba2.html
@@ -20,9 +20,24 @@
 
    </form>
 
+   <!--<a href="http://laweb.com">Mi botón</a>-->
+   <a class="boton" href="http://laweb.com" target="_blank">Mi botón</a>
+
 
   
    <style>
+
+   .boton {
+    border: 1px solid #2e518b; /*anchura, estilo y color borde*/
+    padding: 10px; /*espacio alrededor texto*/
+    background-color: #2e518b; /*color botón*/
+    color: #ffffff; /*color texto*/
+    text-decoration: none; /*decoración texto*/
+    text-transform: uppercase; /*capitalización texto*/
+    font-family: 'Helvetica', sans-serif; /*tipografía texto*/
+    border-radius: 50px; /*bordes redondos*/
+    }
+
     form {
   /* Centrar el formulario en la página */
   margin: 0 auto;
